--- a/plugin.xml
+++ b/plugin.xml
@@ -55,16 +55,21 @@
       </feature>
     </config-file>
 
-    <framework src="com.soundcloud.android:android-crop:1.0.0@aar" />
+    <!-- @SK: Use v.1.0.1 -->
+    <framework src="com.soundcloud.android:android-crop:1.0.1@aar" />
 
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
-      <activity android:name="com.soundcloud.android.crop.CropImageActivity" />
+      <activity android:name="com.soundcloud.android.crop.CropImageActivity" android:theme="@style/CustomCropTheme" />
+            <!-- android:label="@string/multi_app_name" -->
     </config-file>
 
     <config-file target="AndroidManifest.xml" parent="/manifest">
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     </config-file>
 
     <source-file src="src/android/CropPlugin.java" target-dir="src/com/jeduan/crop" />
+    <source-file src="src/android/Library/res/values/themes.xml" target-dir="res/values"/>
+
   </platform>
 </plugin>
