--- a/plugin.xml
+++ b/plugin.xml
@@ -69,7 +69,29 @@
     </config-file>
 
     <source-file src="src/android/CropPlugin.java" target-dir="src/com/jeduan/crop" />
+
+    <!-- @SK: Set the theme here, since it clashes with existing res/values/themes.xml -->
+    <config-file target="res/values/themes.xml" parent="/*">
+      <resources>
+          <style name="CustomCropTheme" parent="android:Theme.DeviceDefault">
+              <item name="cropImageStyle">@style/Widget.CropImageView</item>
+          </style>
+          <style name="Widget.CropImageView" parent="android:Widget">
+              <item name="showThirds">true</item>
+              <item name="showCircle">false</item>
+              <item name="showHandles">always</item>
+              <item name="highlightColor">#00B7E5</item>
+          </style>
+
+      </resources>
+			<feature name="ImagePicker">
+				<param name="android-package" value="com.synconset.ImagePicker"/>
+			</feature>
+		</config-file>
+
+    <!--
     <source-file src="src/android/Library/res/values/themes.xml" target-dir="res/values"/>
+    -->
 
   </platform>
 </plugin>
